--- a/META.yml
+++ b/META.yml
@@ -1,30 +1,31 @@
---- #YAML:1.0
-name:               Net-DSLProvider
-version:            0.01
-abstract:           Standardized interface to various DSL providers
+---
+abstract: 'Standardized interface to various DSL providers'
 author:
-    - Simon Cozens <simon@simon-cozens.org>
-license:            perl
-distribution_type:  module
-configure_requires:
-    ExtUtils::MakeMaker:  0
+  - 'Jason Clifford <jason@ukfsn.org>, Simon Cozens <simon@simon-cozens.org>'
 build_requires:
-    ExtUtils::MakeMaker:  0
-requires:
-    Class::Accessor:      0
-    Date::Holidays::EnglandWales:  0
-    HTML::Entities:       0
-    HTTP::Cookies:        0
-    LWP:                  0
-    Test::More:           0
-    Time::Piece:          0
-    Time::Seconds:        0
-    XML::Simple:          0
-no_index:
-    directory:
-        - t
-        - inc
-generated_by:       ExtUtils::MakeMaker version 6.56
+  ExtUtils::MakeMaker: 0
+configure_requires:
+  ExtUtils::MakeMaker: 0
+dynamic_config: 1
+generated_by: 'ExtUtils::MakeMaker version 6.62, CPAN::Meta::Converter version 2.120921'
+license: perl
 meta-spec:
-    url:      http://module-build.sourceforge.net/META-spec-v1.4.html
-    version:  1.4
+  url: http://module-build.sourceforge.net/META-spec-v1.4.html
+  version: 1.4
+name: Net-DSLProvider
+no_index:
+  directory:
+    - t
+    - inc
+requires:
+  Class::Accessor: 0
+  Date::Holidays::EnglandWales: 0
+  HTML::Entities: 0
+  HTTP::Cookies: 0
+  LWP: 0
+  SOAP::Lite: 0
+  Test::More: 0
+  Time::Piece: 0
+  Time::Seconds: 0
+  XML::Simple: 0
+version: 0.03
